# shadPS4

./: .gitmodules  CMakeLists.txt  CMakeWindowsPresets.json  REUSE.toml  tatus
.github/workflows/: build.yml  update_translation.yml
.github/workflows/scripts/: update_translation.sh
src/: emulator.cpp  main.cpp
src/common/: config.cpp  config.h  types.h
src/common/logging/: filter.cpp  types.h
src/core/: address_space.cpp  emulator_settings.h  linker.cpp  memory.cpp  module.cpp  module.h  signals.cpp  signals.h
src/core/cpu_runtime/: CMakeLists.txt  block_cache.cpp  block_cache.h  code_cache.cpp  code_cache.h  copy_gate.h  cpu_backend.h  guest_state.h  hle_registry.cpp  hle_registry.h  hle_thunk_arm64.S  lifter_x86_copy_host.cpp  runtime.cpp  runtime.h  runtime_diagnostics.cpp  runtime_diagnostics.h
src/core/cpu_runtime/gateway/: gateway.h  gateway_arm64.cpp  gateway_x86.cpp
src/core/cpu_runtime/lifter/: lifter.h  lifter_arm64_host.cpp  lifter_x86_host.cpp
src/core/devtools/: layer.cpp
src/core/devtools/widget/: frame_graph.cpp  module_list.h  shader_list.cpp
src/core/file_sys/: fs.cpp
src/core/libraries/: libs.cpp
src/core/libraries/audio/: audio_out.cpp  audio_out.h  audio_out_backend.h  audioout.cpp  audioout.h  sdl_audio_out.cpp
src/core/libraries/audio3d/: audio3d.cpp  audio3d.h
src/core/libraries/avplayer/: avplayer_impl.cpp  avplayer_state.cpp
src/core/libraries/fiber/: fiber.cpp
src/core/libraries/font/: font.cpp  font.h
src/core/libraries/gnmdriver/: gnmdriver.cpp
src/core/libraries/kernel/: threads.h
src/core/libraries/kernel/threads/: exception.cpp  mutex.cpp  pthread.cpp  pthread.h  pthread_clean.cpp  pthread_spec.cpp  stack.S  thread_state.cpp
src/core/libraries/network/: http.cpp  http.h  net.cpp  net.h  net_ctl_codes.h  net_ctl_obj.cpp  net_epoll.h  netctl.cpp  p2p_sockets.cpp  posix_sockets.cpp  sockets.h  sys_net.cpp
src/core/libraries/np/: np_auth.cpp  np_common.cpp  np_common.h  np_common_error.h  np_error.h  np_handler.cpp  np_handler.h  np_manager.cpp  np_manager.h  np_matching2.cpp  np_matching2.h  np_matching2_error.h  np_matching2_internal.h  np_matching2_mm.cpp  np_matching2_mm.h  np_matching2_state.cpp  np_matching2_types.h  np_profile_dialog.cpp  np_profile_dialog.h  np_score.cpp  np_score.h  np_signaling.cpp  np_signaling.h  np_signaling_error.h  np_signaling_helpers.cpp  np_signaling_helpers.h  np_signaling_state.cpp  np_signaling_state.h  np_types.h  np_utility.cpp  np_utility.h  np_web_api.cpp  np_web_api.h  np_web_api2.cpp  np_web_api_internal.cpp  np_web_api_internal.h  trophy_ui.cpp
src/core/libraries/np/np_manager/: np_manager.cpp  np_manager.h
src/core/libraries/np/np_tus/: np_tus.cpp  np_tus.h
src/core/libraries/np/np_web_api/: np_web_api.cpp  np_web_api.h  np_web_api_internal.cpp  np_web_api_internal.h
src/core/libraries/np_trophy/: np_trophy.cpp
src/core/libraries/pad/: pad.cpp
src/core/libraries/system/: systemservice.cpp
src/core/libraries/usbd/: usb_backend.h  usbd.cpp
src/core/libraries/usbd/emulated/: dimensions.cpp
src/imgui/renderer/: imgui_core.cpp  imgui_impl_sdl3.cpp
src/qt_gui/translations/: en.ts  updateTranslation.sh  update_translation.sh
src/shader_recompiler/frontend/translate/: translate.cpp
src/shadnet/: client.cpp  client.h
src/video_core/: cache_storage.cpp
src/video_core/amdgpu/: liverpool.cpp
src/video_core/buffer_cache/: memory_tracker.h  region_manager.h
src/video_core/renderer_vulkan/: vk_pipeline_cache.cpp  vk_pipeline_serialization.cpp  vk_platform.cpp  vk_presenter.cpp  vk_rasterizer.cpp  vk_scheduler.h  vk_swapchain.cpp
src/video_core/texture_cache/: image.cpp  image_info.cpp  image_view.cpp  texture_cache.cpp
tests/: CMakeLists.txt  diff_oracle.h  test_concurrency.cpp  test_cpu_runtime.cpp  test_differential.cpp  test_differential_sonic.cpp  test_emulator_settings.cpp  test_lifter.cpp  test_runtime.cpp
tests/stubs/: core_tls_signals_stub.cpp  log_stub.cpp  scm_rev_stub.cpp  sdl_stub.cpp
